--- a/Changes
+++ b/Changes
@@ -1,16 +1,19 @@
 Revision history for App-ZofCMS-Plugin-LinksToSpecs-CSS
 
-0.0104  July 28, 2009
-        Added missing :focus pseudo-class
+0.0105  2013-11-09
+        - Minor fixes to comply with specs and Kwalitee game
 
-0.0103  July 28, 2009
-        Added missing :lang and :first-child pseudo-classes
-        and :first-letter and :first-line pseudo-elements
+0.0104  2009-07-28
+        - Added missing :focus pseudo-class
 
-0.0102  July 19, 2009
-        Added :hover, :link, :active, :visited
-        as well as :before and :after pseudo-classes/elements
+0.0103  2009-07-28
+        - Added missing :lang and :first-child pseudo-classes
+          and :first-letter and :first-line pseudo-elements
 
-0.0101  August 12, 2008
-        First version, released on an unsuspecting world.
+0.0102  2009-07-19
+        - Added :hover, :link, :active, :visited
+          as well as :before and :after pseudo-classes/elements
+
+0.0101  2008-08-12
+        - First version, released on an unsuspecting world.
 
